--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quote</title>
+    <link rel="stylesheet" href="/dist/main.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <img src="/images/logo.png"  height="50" alt="logo">
+                <nav>
+                    nav
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="js-main"></div>
+    </main>
     
-    <script defer src="dist/main.js"></script>
+    <script defer src="/dist/main.js"></script>
 </body>
 </html>
