Added burger navigation button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
         <div class="container">
             <div class="header__inner">
                 <img src="/images/logo.png"  height="50" alt="logo">
-                <nav>
-                    nav
-                </nav>
+                <div class="navigation js-nav">
+                    <button class="navigation__burger hamburger js-nav-burger" aria-label="open navigation">
+                        <div class="hamburger__box">
+                            <div class="hamburger__inner"></div>
+                        </div>
+                    </button>
+                    <nav hidden>
+                        nav
+                    </nav>
+                </div>
+                
             </div>
         </div>
     </header>
