Added blockquote markup

--- a/index.html
+++ b/index.html
@@ -21,16 +21,23 @@
                         </div>
                     </button>
                     <nav class="navigation__main" id="main-nav" aria-hidden="true">
-                        nav
+                        <a class="navigation__link" href="/#random-post1">Random Quote 1</a>
+                        <a class="navigation__link" href="/#random-post2">Random Quote 2</a>
+                        <a class="navigation__link" href="/#random-post3">Random Quote 3</a>
+                        <a class="navigation__link" href="/#random-post4">Random Quote 4</a>
                     </nav>
                 </div>
                 
             </div>
         </div>
     </header>
-    <main>
+    <main class="main">
         <div class="container">
-            <div class="js-main"></div>
+            <blockquote class="quote js-quote">
+                <div class="quote__main js-quote-main"></div>
+                <cite class="quote__author js-quote-author"></cite>
+
+            </blockquote>
         </div>
     </main>
     
