Request random quote after each navigation click

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                             <div class="hamburger__inner"></div>
                         </div>
                     </button>
-                    <nav class="navigation__main" id="main-nav" aria-hidden="true">
-                        <a class="navigation__link" href="/#random-post1">Random Quote 1</a>
-                        <a class="navigation__link" href="/#random-post2">Random Quote 2</a>
-                        <a class="navigation__link" href="/#random-post3">Random Quote 3</a>
-                        <a class="navigation__link" href="/#random-post4">Random Quote 4</a>
+                    <nav class="navigation__main js-nav-links-wrap" id="main-nav" aria-hidden="true">
+                        <a class="navigation__link js-nav-link" href="/#random-quote1">Random Quote 1</a>
+                        <a class="navigation__link js-nav-link" href="/#random-quote2">Random Quote 2</a>
+                        <a class="navigation__link js-nav-link" href="/#random-quote3">Random Quote 3</a>
+                        <a class="navigation__link js-nav-link" href="/#random-quote4">Random Quote 4</a>
                     </nav>
                 </div>
                 
