Use relevant links for gh-pages

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quote</title>
-    <link rel="stylesheet" href="/dist/main.css">
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <img src="/images/logo.png"  height="50" alt="logo">
+                <img src="images/logo.png"  height="50" alt="logo">
                 <div class="navigation js-nav">
                     <button class="navigation__burger hamburger js-nav-burger" 
                     aria-label="open navigation"
@@ -41,6 +41,6 @@
         </div>
     </main>
     
-    <script defer src="/dist/main.js"></script>
+    <script defer src="dist/main.js"></script>
 </body>
 </html>
