Added timestamp to request parameters

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         </div>
                     </button>
                     <nav class="navigation__main js-nav-links-wrap" id="main-nav" aria-hidden="true">
-                        <a class="navigation__link js-nav-link" href="/#random-quote1">Random Quote 1</a>
-                        <a class="navigation__link js-nav-link" href="/#random-quote2">Random Quote 2</a>
-                        <a class="navigation__link js-nav-link" href="/#random-quote3">Random Quote 3</a>
-                        <a class="navigation__link js-nav-link" href="/#random-quote4">Random Quote 4</a>
+                        <a class="navigation__link js-nav-link" href="#random-quote1">Random Quote 1</a>
+                        <a class="navigation__link js-nav-link" href="#random-quote2">Random Quote 2</a>
+                        <a class="navigation__link js-nav-link" href="#random-quote3">Random Quote 3</a>
+                        <a class="navigation__link js-nav-link" href="#random-quote4">Random Quote 4</a>
                     </nav>
                 </div>
                 
